Change openconnect service to fork
Sometimes it seems that openconnect goes into the background even if
not started with '--background'. Changing to fork and setting a
restart delay should hopefully make it behave better.

--- a/vpn-openconnect.service.j2
+++ b/vpn-openconnect.service.j2
@@ -4,12 +4,13 @@ After=network.target
 Requires=networking.service
 
 [Service]
-Type=simple
+Type=fork
 ExecStart=/home/vagrant/openconnect-script.sh
 ExecReload=/bin/kill -USR2 $MAINPID
 ExecStop=/bin/kill -INT $MAINPID
 
 Restart=on-success
+RestartSec=10
 SuccessExitStatus=1
 
 PIDFile=/var/run/openconnect.pid
