Remove KillSignal from openconnect service
I clearly don't know the correct format of this parameter.

--- a/vpn-openconnect.service.j2
+++ b/vpn-openconnect.service.j2
@@ -15,7 +15,7 @@ SuccessExitStatus=1 2
 
 PIDFile=/var/run/openconnect.pid
 
-KillSignal=INT
+#KillSignal=INT
 
 [Install]
 WantedBy=multi-user.target
